--- a/k8s/frontend.yaml
+++ b/k8s/frontend.yaml
@@ -15,6 +15,7 @@ spec:
       containers:
         - name: frontend
           image: gabsiuuu/caas-healthcare-frontend:latest
+          imagePullPolicy: Always
           ports:
             - containerPort: 5173
           env:
