--- a/k8s/frontend.yaml
+++ b/k8s/frontend.yaml
@@ -19,8 +19,8 @@ spec:
           ports:
             - containerPort: 5173
           env:
-            - name: VITE_API_URL
-              value: "http://api-gateway:4000"
+            - name: VITE_API_BASE
+              value: "http://192.168.49.2:31784"
 ---
 apiVersion: v1
 kind: Service
