--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,25 +1,7 @@
-# ---------- BUILD STAGE ----------
-    FROM node:20-alpine AS build
-
-    WORKDIR /app
-    
-    COPY package*.json ./
-    RUN npm ci
-    
-    COPY . .
-    
-    ARG VITE_API_BASE
-    ENV VITE_API_BASE=$VITE_API_BASE
-    
-    RUN npm run build
-    
-    
-    # ---------- PRODUCTION STAGE ----------
-    FROM nginx:alpine
-    
-    COPY --from=build /app/dist /usr/share/nginx/html
-    
-    EXPOSE 80
-    
-    CMD ["nginx", "-g", "daemon off;"]
-    
+FROM node:20-alpine
+WORKDIR /app
+COPY package*.json ./
+RUN npm ci
+COPY . .
+EXPOSE 5173
+CMD ["npm","run","dev","--","--host","0.0.0.0"]
