--- a/k8s/frontend.yaml
+++ b/k8s/frontend.yaml
@@ -20,7 +20,7 @@ spec:
             - containerPort: 5173
           env:
             - name: VITE_API_BASE
-              value: "http://192.168.49.2:31784"
+              value: "http://api-gateway:4000"
 ---
 apiVersion: v1
 kind: Service
@@ -32,5 +32,5 @@ spec:
     app: frontend
   ports:
     - port: 80
-      targetPort: 80
+      targetPort: 5173
       nodePort: 30080
